--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.19.2",
     "highlight.js": "^9.18.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-html-parser": "^2.0.2",
+    "react-moment": "^0.9.7",
     "react-quill": "^1.3.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
