--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^3.26.11",
     "axios": "^0.19.2",
     "highlight.js": "^9.18.1",
     "jwt-decode": "^2.2.0",
